Add comments to printer list; add gen-printer-list to create supported printer list

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.49 2014/01/08 01:50:29 rlk Exp $
+## $Id: Makefile.am,v 1.50 2014/05/22 02:08:20 rlk Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -34,7 +34,7 @@ TESTS = curve run-testdither
 ## Programs
 
 if BUILD_TEST
-noinst_PROGRAMS = testdither escp2-weavetest unprint pcl-unprint bjc-unprint curve xml-curve pixma_parse
+noinst_PROGRAMS = testdither escp2-weavetest unprint pcl-unprint bjc-unprint curve xml-curve pixma_parse gen-printer-list
 endif
 
 escp2_weavetest_SOURCES = escp2-weavetest.c
@@ -57,6 +57,9 @@ testdither_LDADD = $(GUTENPRINT_LIBS)
 
 xml_curve_SOURCES = xml-curve.c
 xml_curve_LDADD = $(GUTENPRINT_LIBS)
+
+gen_printer_list_SOURCES = gen-printer-list.c
+gen_printer_list_LDADD = $(GUTENPRINT_LIBS)
 
 pixma_parse_SOURCES = pixma_parse.c pixma_parse.h
 
